GNOME Bugzilla – Bug 679328
keyboard: Plug a GSettings object leak
Last modified: 2012-07-03 15:06:03 UTC
See patch.
Created attachment 217934 [details] [review] keyboard: Plug a GSettings object leak
Review of attachment 217934 [details] [review]: Do we know the life-cycle of this static settings object ? I see at least two different places where it gets created, without any concern for an already existing object...
(In reply to comment #2) > Review of attachment 217934 [details] [review]: > > Do we know the life-cycle of this static settings object ? I see at least two > different places where it gets created, without any concern for an already > existing object... I only see one place. Are you talking about the local variable with the same name in edit_custom_shortcut() ? That one gets unrefed properly it seems although it's slightly confusing to have it there with the same name. That function is short though...
Created attachment 217937 [details] [review] keyboard: Plug a GSettings object leak Also, rename the variable holding it since there are other 'settings' variables in the same file. -- This should make it clearer.
Review of attachment 217937 [details] [review]: Oh, yeah. I overlooked that it was a local there.
Attachment 217937 [details] pushed as 13b64e0 - keyboard: Plug a GSettings object leak