keyboard: Plug a GSettings object leak

Also, rename the variable holding it since there are other 'settings'
variables in the same file.

https://bugzilla.gnome.org/show_bug.cgi?id=679328